# notes

./: githubrepos.md
Algo/: Recursion.md  algorithm-complexity-list.md  algorithm.md  algorithm__.md  algorithm_list.md  algorithm_list__.md  data_structure.md  data_structure__.md  extra_notes__.md  maths.md  non_primitive_data_structure__.md  primitive_data_structure.md  primitive_data_structure__.md
CSharp/CourseOne/: Main.md  Readme.md
ForAll/: Flutter-Dart.md  React.md
HTML/: canvas.md
IOT/: References.md
IOT/ble/: basic.md
JS/: clearInterval.js
Kubernetes/: custom-values.yaml  install.md  k8s1.md  k8s100.md  k8s2.md  k8s3.md  k8s4.md  k8s5.md  k8s6.md  k8s7.md  k8s8.md  k8s9.md  local_docker_kube_setup.md
Kubernetes/k8s_yamls/: namespace.yml  simple_pod.yml  simple_pod_replicaSets.yml  simple_pod_with_2_containers.yml
Linux/: LetsEncryptCert.md  Mosquitto.md  commands.md
Networking/: BitShift.html  BitShift.md  Bytes.md  Networking-OSI.md  NetworkingOne.md  NetworkingTwo.md  Protocol-Categoriztion.md  RTCP.md  RTP.md  Requests_Structure_Basics.md
Networking/MSRP/: 1.md
Networking/SIP/: SIP.md  kamailio.md  one.md  references.md
Networking/WebTransport/: 1.md
Networking/WebTransport/python/aiqktest/: pyproject.toml
Networking/prints/: BitShift.html  Bytes.html  Networking-OSI.html  NetworkingOne.html  (+6 more)
Python/: rough.md
React/: Redux.md  react_one.md
Rust/: concurrency.md  os.md  variables.md
Solidjs/: basic.md
audio/: audio.md  digital_audio.md
patterns/: patterns.md  references.md  rough.md
wip/: installing_platformio.md
(+89 files in other folders)
